--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=${SERVER_PORT:8088}
 
-spring.freemarker.suffix=.ftl
-
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:secu}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:12345678}
@@ -22,3 +20,5 @@ init.password=${INIT_PASSWORD:12345678}
 jwt.secret=${SECRET_STRING:1 kure sluga userdnyj boga}
 jwt.header=Authorization
 jwt.expiration=86400
+
+front.host=http://${FRONT_HOST:localhost}:${FRONT_PORT:3000}
